--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.5",
     "ag-grid-angular": "^21.2.1",
     "ag-grid-community": "^21.2.1",
+    "file-saver": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.15.1",
