--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ag-grid-angular": "^21.2.1",
     "ag-grid-community": "^21.2.1",
     "file-saver": "^2.0.2",
+    "ngx-ui-loader": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.15.1",
